# lnurl_tests

./: .gitignore  Cargo.toml  Makefile
example/: package-lock.json  package.json
front/: package-lock.json  package.json
front/src/routes/: +page.svelte  Button.svelte  Card.svelte  Invoice.svelte  Store.svelte  ZapIcon.svelte
src/: invoice.rs  main.rs  recipient.rs  server.rs
