[package]
name = "astron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.4"
bech32 = "0.9.1"
bitcoin_hashes = "0.11.0"
image = "0.24.6"
lightning = "0.0.115"
lightning-invoice = "0.23.0"
qrcode = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
secp256k1 = { version = "0.24.3", default-features = false, features = [
    "recovery",
    "alloc"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "fs"] }
tower-http = { version = "0.5.1", features = ["cors", "trace"] }

[patch.crates-io]
qrcode = { git = "https://github.com/qm3ster/qrcode-rust", rev = "0f75a68c7ab76c5a4ce75185a9b3367bffb7d109" }
